@@ -199,6 +199,9 @@
       - Update: agi/agi-VDAD_ALL_outbound.agi,
           www/agc/vdc_db_query.php: Work on sip logger.
     * Sync agi directory with upstream.
+    * Change backup:
+      - Update bin/ADMIN_backup_ng.pl (V3.1.3) : Use YYYY-MM-DD[-HH] for
+          archive file name.
 
 2.26.29
   [Jörg Frings-Fürst]
